# gengo-no-rutsu

./: .gitignore  Cargo.toml  Dockerfile  README.md  pref_data.json  words.json  words_data.json
.github/workflows/: ci.yml
src/: answer.rs  listener.rs  main.rs  types.rs  util.rs  words.json
src/answer/: sorry.rs  words.rs
src/utils/: answer.rs  constant.rs  listener.rs  morpheme.rs  parse.rs  str.rs  word.rs
src/word/: mod.rs  types.rs  word.rs
