[package]
name = "gengo-no-rutsu"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.11", features = ["macros", "webhooks-axum"] }
axum =  "0.5.13"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
url = "2.3.1"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
rand = "0.8.5"
trigram = "0.4.4"